[feature] 提交小包的问题

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 .vscode
 .idea/*
 node_modules
+/target/
+/.classpath
+/tmp/
+/.settings/
+/.idea/
+/*.iml
+/LeetCode/target
+/**/*.iml
+/**/target
+/**/rebel-remote.xml
+/**/rebel.xml
+
+/.scannerwork/
