--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
             <artifactId>jol-cli</artifactId>
             <version>0.15</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.2.9</version>
+		</dependency>
+	</dependencies>
 
 
 </project>
